--- a/movie-db/src/components/Navigation/SearchInput/SearchInput.css
+++ b/movie-db/src/components/Navigation/SearchInput/SearchInput.css
@@ -5,26 +5,32 @@
     width: 900px;
     margin: 0 auto;
     height: 40px;
-    transition: transform .5s ease-out;
+    transition: all 1s ease-out;
 }
 
-.search-input input {
+.search-input-search {
     width: 100%;
     height: 100%;
     border: none;
     font-size: 2em;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid white;
     outline: none;
+    background-color: rgb(118, 118, 118);
+}
+
+::placeholder {
+    color: rgb(132, 132, 132);
+    opacity: 1;
 }
 
 .open {
     opacity: 1;
-    background-color: black;
-    transform: translateY(60%)
+    z-index: 100;
+    transform: translateX(0)
 }
 
 .closed {
     opacity: 0;
-    background-color: red;
-    transform: translateY(0%)
+    z-index: -100;
+    transform: translateX(-2000px)
 }
