--- a/movie-db/src/components/Navigation/Toolbar/Toolbar.css
+++ b/movie-db/src/components/Navigation/Toolbar/Toolbar.css
@@ -14,11 +14,12 @@
 .toolbar-items h2 {
     font-family: 'Monoton', cursive;
     font-size: 4em;
-    padding-top: 3%
+    padding-top: 3%;
+    -border: 1px solid black;
 }
 
 .toolbar-items a {
-    color: black;
+    color: rgb(122, 40, 14);
 }
 
 .toolbar-items-info {
@@ -40,4 +41,10 @@
 .toolbar-search:hover {
     color: rgb(196, 196, 196);
     cursor: pointer;
+}
+
+.toolbar-div {
+    background-color: rgb(122, 40, 14);
+    height: 20px;
+    width: 100%;
 }
