--- a/movie-db/src/containers/Movie/Movie.css
+++ b/movie-db/src/containers/Movie/Movie.css
@@ -6,21 +6,35 @@
     background-size: 100%;
     background-color: black;
     position: relative;
-    opacity: 1;
 }
 
-.movie::after {
-    opacity: .1;
-}
 
 .movie-info {
-    opacity: 1;
-    height: 60%;
-    width: 70%;
+    padding: 5% 8%;
+    height: auto;
+    width: 80%;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: rgb(102, 102, 102);
     position: absolute;
-    top: 200px;
-    left: 15% ;
+    top: 150px;
+    left: 10% ;
+    display: grid;
+    grid-template-columns: repeat(1, 40%) 1fr;
+    grid-template-rows: repeat(1, 1fr) auto;
+    grid-gap: 10px;
+    border-radius: 20px;
+    border: 2px solid rgb(122, 40, 14)
 }
 
+.movie-info-div img {
+    border-radius: 5px;
+    width: 100%;
+}
+
+.item2 p {
+    padding: 2%;
+}
+
+.item3 {
+    grid-column: 1 / 3;
+}
