--- a/movie-db/src/components/Navigation/SearchInput/SearchInput.css
+++ b/movie-db/src/components/Navigation/SearchInput/SearchInput.css
@@ -5,11 +5,11 @@
     width: 900px;
     margin: 0 auto;
     height: 40px;
-    transition: all 1s ease-out;
+    transition: all .4s ease-out;
 }
 
 .search-input-search {
-    width: 100%;
+    width: 900px;
     height: 100%;
     border: none;
     font-size: 2em;
@@ -33,4 +33,35 @@
     opacity: 0;
     z-index: -100;
     transform: translateX(-2000px)
+}
+
+@media (max-width: 800px) {
+
+    .search-input {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .search-input-search {
+        width: 100%;
+    }
+
+    .open {
+        opacity: 1;
+        transform: none;
+    }
+
+    .closed {
+        opacity: 1;
+        z-index: 100;
+        transform: none;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .search-input-search {
+        font-size: 1.3em;
+    }
+
 }
