--- a/movie-db/src/containers/Movie/Movie.css
+++ b/movie-db/src/containers/Movie/Movie.css
@@ -28,6 +28,7 @@
 
 .movie-info-div img {
     border-radius: 5px;
+    border: 2px solid rgb(48, 48, 48);
     width: 100%;
 }
 
@@ -37,4 +38,20 @@
 
 .item3 {
     grid-column: 1 / 3;
+}
+
+@media (max-width: 800px) {
+    .movie {
+        width: 100%;
+    }
+}
+
+@media (max-width: 450px) {
+    .movie-info {
+        display: block;
+    }
+
+    .movie-info-div {
+        padding-top: 10px;
+    }
 }
